[package]
name = "no_file_limit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nfl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
dialoguer = "0.10.1"
indicatif = "0.16.2"